# test-mqtt-sn-gateway

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  README.md  py_nusperipheral.py  runAll_Tests
TestResults/2017_10_11/: Test Results - All_in_LinuxUdpGateway_Advertise_cpp.html  Test Results - All_in_LinuxUdpGateway_Connect_Test_cpp.html  Test Results - All_in_LinuxUdpGateway_Disconnect_Test_cpp.html  Test Results - All_in_LinuxUdpGateway_Functional_Subscribe_Check_cpp.html  Test Results - All_in_LinuxUdpGateway_Pingreq_Test_cpp.html  Test Results - All_in_LinuxUdpGateway_Register_Check_cpp.html  Test Results - All_in_LinuxUdpGateway_SearchGw_Check_cpp.html  Test Results - All_in_LinuxUdpGateway_Sleep_cpp.html  Test Results - All_in_LinuxUdpGateway_Subscribe_Check_cpp.html  Test Results - All_in_LinuxUdpGateway_Unsubscribe_Check_cpp.html  Test Results - All_in_LinuxUdpGateway_Will_cpp.html  Test Results - LinuxUdpGateway_Will_ConnectWithWillDuration0_noTimeout_noWillAfter120Received.html  Test Results - LinuxUdpGateway_Will_ConnectWithWillDuration1_timeout_WillAfter2Received.html  Test Results - LinuxUdpGateway_Will_ConnectWithoutWillDuration60_timeout_noWillAfter120Received.html  Test Results - LinuxUdpGateway_Will_ConnectWithtWillDisconnectConnectCleanSessionWithoutWill_timeout_noWillAfter120Received.html  Test Results - runAll_Tests_without_Will.html
src/compliance/: LinuxUdpGateway_Connect_Test.cpp  LinuxUdpGateway_Disconnect_Test.cpp  LinuxUdpGateway_Pingreq_Test.cpp  LinuxUdpGateway_Register_Check.cpp  LinuxUdpGateway_SearchGw_Check.cpp  LinuxUdpGateway_Subscribe_Check.cpp  LinuxUdpGateway_Unsubscribe_Check.cpp  LinuxUdpGateway_WillUpdate_Test.cpp  Publish_Check.cpp
src/functional/: LinuxUdpGateway-Functional_Disconnect.cpp  LinuxUdpGateway_Advertise.cpp  LinuxUdpGateway_Function_Connect.cpp  LinuxUdpGateway_Functional_Subscribe_Check.cpp  LinuxUdpGateway_Publish.cpp  LinuxUdpGateway_Sleep.cpp  LinuxUdpGateway_Sleeping.cpp  LinuxUdpGateway_Will.cpp  LinuxUdpGateway_WillUpdate.cpp
src/integration/: General_Check.cpp
src/lib/paho/: CMakeLists.txt  LinuxUdpClientFake.cpp  LinuxUdpClientFake.h  MockMqttSnReceiver.cpp  MockMqttSnReceiver.h  MqttReceiverInterface.h  MqttReceiverMock.cpp  MqttReceiverMock.h  MqttSnReceiverInterface.h  PahoMqttTestMessageHandler.cpp  PahoMqttTestMessageHandler.h  ReceiverInterface.h  ReceiverMock.cpp  ReceiverMock.h
src/lib/paho/pahomqttembeddedc/MQTTClient/src/linux/: linux.cpp
src/lib/testclients/: CMakeLists.txt  LinuxUdpClientFake.cpp  LinuxUdpClientFake.h  MockMqttSnReceiver.h  MqttPublish.cpp  MqttPublish.h  MqttSnReceiverInterface.cpp  MqttSnReceiverInterface.h  PahoMqttTestMessageHandler.cpp  mqttsn_test_messages.h
src/lib/testclients/FakeClientSockets/: FakeBluetoothLeSocket.cpp  FakeBluetoothLeSocket.h  FakeSerialSocket.cpp  FakeSerialSocket.h  FakeSocketInterface.h  FakeTcpSocket.cpp  FakeTcpSocket.h  FakeUdpSocket.cpp  FakeUdpSocket.h
src/publish/: LinuxUdpGateway_Connect_Test.cpp  Publish_Check.cpp  google_test_main_arguments.h
